# car-like-robot-gazebo

./: .gitmodules  README.md
robot_description/: CMakeLists.txt  package.xml
robot_description/launch/: try_gazebo.launch  try_rviz.launch
robot_description/rviz/: try_rviz.rviz
robot_description/urdf/pav_s00/: pav_s00.xacro
robot_description/urdf/pav_s01/: pav_s01.gazebo  pav_s01.xacro
robot_description/urdf/pav_s01_scaled/: pav_s01_scaled.gazebo  pav_s01_scaled.xacro
robot_gazebo/: CMakeLists.txt  package.xml
robot_gazebo/config/: gazebo_bridge.yaml
robot_gazebo/config/controller_manager/: pav_s00_motor_ctrl_config.yaml  pav_s01_motor_ctrl_config.yaml  pav_s01_scaled_motor_ctrl_config.yaml
robot_gazebo/config/move_base/teb/: global_costmap_params.yaml  teb_local_planner_params.yaml
robot_gazebo/include/: ack_to_servo.h
robot_gazebo/launch/: create_robot.launch  gazebo_bridge.launch  gazebo_demo.launch  gmapping.launch  try_gazebo_world.launch  try_robot_sim.launch  try_slam_nav.launch  try_structured_road.launch
robot_gazebo/maps/: ISCAS_building.pgm  ISCAS_building.yaml  room_mini.pgm  room_mini.yaml
robot_gazebo/models/ISCAS/hatchback/: model.sdf
robot_gazebo/models/ISCAS/hatchback_red/: model.sdf
robot_gazebo/models/ISCAS_building/: model.sdf
robot_gazebo/rviz/: perception.rviz
robot_gazebo/scripts/: gazebo_bridge_node.py  gazebo_manager_node.py
robot_gazebo/urdf/pav_s00/: macros.xacro  pav_s00.gazebo  pav_s00.xacro  pav_s00_VLP-16.urdf.xacro
robot_gazebo/urdf/pav_s01/: macros.xacro  pav_s01.gazebo  pav_s01.xacro
robot_gazebo/urdf/pav_s01_scaled/: pav_s01_scaled.gazebo  pav_s01_scaled.xacro
robot_gazebo/worlds/: ISCAS_building.world  ROS-Academy.world  road_2024.world  simple_road.world  simple_road_v1.world
(+10 files in other folders)
